import jdl model